# astro-ml

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: Chart.yaml  values.yaml
k8s/templates/: cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml
scripts/: train.py
src/api/: main.py
src/astro/: swisseph_api.py
src/chart/: visualize.py
src/ml/: model.py
terraform/: main.tf  outputs.tf
tests/: test_api.py
