[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-ml"
version = "1.0.0"
dependencies = [
    "pyswisseph>=2.10,<2.11",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "redis>=5",
    "slowapi>=0.1",
    "structlog>=24.2",
]
